<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_done">Done</string>
    <string name="common_true">true</string>
    <string name="common_false">false</string>
    <string name="common_remove">Remove</string>
    <string name="common_lock">Lock</string>
    <string name="common_unlock">Unlock</string>
    <string name="app_name">WiFiAutoLock</string>
    <string name="register_ssid_no_selection">Please select SSID.</string>
    <string name="register_ssid_no_input">Please enter SSID.</string>
    <string name="manage_ssid_remove">Remove</string>
    <string name="manage_ssid_add_ssid">Add SSID</string>
    <string name="register_ssid_add">Add</string>
    <string name="pref_key_run">run</string>
    <string name="pref_key_unreg_area">unreg_area</string>
    <string name="pref_key_interval">interval</string>
    <string name="pref_sum_stopped">Check to enable auto-lock</string>
    <string name="pref_sum_started">Uncheck to disable auto-lock</string>
    <string name="pref_sum_ssid_manage">Tap here to manage registered SSIDs</string>
    <string name="pref_sum_interval">Specify update interval in seconds</string>
    <string name="pref_sum_unreg_area">Set behavior in unregistered area</string>
    <string name="pref_dialog_title_interval">Interval in second</string>
    <string name="pref_dialog_title_unreg_area">Select one</string>
    <string name="pref_dialog_msg_interval">Enter between </string>
    <string name="prog_dialog_msg">Scanning...</string>
    <string name="toast_ssid_added">SSID has been added</string>
    <string name="alert_dialog_conf_rm">Are you sure to remove the entry?</string>
    <string name="pref_title_run">Enable Auto-Lock</string>
    <string name="pref_title_ssid_manage">SSID List</string>
    <string name="pref_title_unreg_area">Unregistered Area</string>
    <string name="pref_title_interval">Update Interval</string>
    <string name="pref_title_lock_setting">Open Lock Setting</string>
    <string name="pref_sum_lock_setting">Tap to open lock setting</string>
    <string name="register_ssid_manual_msg">Enter SSID below</string>
    <string name="register_ssid_select_msg">Select SSID from list</string>
    <string name="register_ssid_select_scan">Scan</string>
    <string name="register_ssid_radio_select">Select</string>
    <string name="register_ssid_radio_manual">Manual</string>
    <string name="dialog_disclaimer_title">Disclaimer</string>
    <string name="dialog_disclaimer_msg">In no event shall the author be liable for any damages (including data loss due to user\'s oblivescence of password) caused in any way out of the use of this software.</string>
    <string name="dialog_disclaimer_agree">Agree</string>
    <string name="dialog_disclaimer_exit">Exit</string>
    <string name="dialog_first_run_msg">If you have not done yet, please set a lock pattern or a password. Otherwise this software will have no effect.</string>
    <string name="dialog_first_run_setting">Open Setting</string>
</resources>
